# GDGoC-AI-ML

./: .gitignore  README.md  alembic.ini  calculator.py  docker-compose.yml  nano pytest.ini
Day2/: README.md  calculator.py
Day3/: README.md  pyproject.toml
Day3/src/git_day_practice/: bad_style.py
Week1/Day3/: README.md
Week1/Day4/src/wsl_fastapi_practice/: api.py
Week1/Day5/: pyproject.toml  setup.cfg
Week1/Day5/src/secrets_hygiene_practice/: api.py  settings.py
Week1/Day6/tests/: conftest.py
Week1/Day7/: pyproject.toml
Week1/Day7/tests/: test_config.py
Week2/: alembic.ini
Week2/Day10/src/secrets_hygiene_practice/: api.py  db.py  models.py  settings.py
Week2/Day11/scripts/: day11_qdrant_basics.py
Week2/Day8/: .dockerignore  Dockerfile
alembic/: env.py
alembic/versions/: 390445e2efcb_create_tables.py
data/: day12_documents.json
scripts/: day12_embeddings_baseline.py
