[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secrets_hygiene_practice"
version = "0.1.0"
description = "FastAPI project"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
